some improvements in landing

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,8 +5,9 @@ ru:
     header: Как скоро ты достигнешь своей цели?
     description1: Многие не могут нормально начать выигрывать из-за отсутствия цели.
     description2: Поставь себе цель и выиграй свой Миллион*!
-    action: Узнать больше!
+    action: Достигнуть!
     footer: "* - цель у каждого своя"
+    input_placeholder: Ваша цель
     menu:
       main: Главная
       more: Узнать больше
