--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,3 +11,13 @@ ru:
     menu:
       main: Главная
       more: Узнать больше
+  reach:
+    blockquote:
+      text: Если у человека нет определенной цели, он так и будет ходить по кругу, раз за разом возвращаясь на одно и то же место.
+      footer: Луис Сепульведа. Старик, который читал любовные романы
+    goal: "%{amount} руб."
+    title: Как достичь цели?
+  navbar:
+    select_goal: Выбрать цель
+    how_reach_goal: Как достичь цели?
+  footer: '© Цель Ставки 2014'
