Description for progress-bar on reach page was added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,6 +23,7 @@ ru:
     must_multiply: 'Необходимо приумножить баланс:'
     you_can_reach: 'Ставок до достижения цели:'
     how_to: Узнать как?
+    progress: Прогресс достижения цели
   strategy:
     title: Стратегия достижения заданной цели
     table_header:
